省道路运输三级协同管理
省道路运输三级协同管理

省道路运输三级协同管理
省道路运输三级协同管理

--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -30,12 +30,19 @@
     </a>
   </li>
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.three_level_coordinated_management">
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
-      <span>省道路运输三级协同管理</span>
+      <span translate="aside.nav.DASHBOARD">省道路运输三级协同管理</span>
     </a>
   </li>
+  <li>
+    <a href class="auto" ui-sref="app.waterway_administration">
+      <i class="glyphicon glyphicon-th"></i>
+      <span translate="aside.nav.DASHBOARD">省水路运政管理</span>
+    </a>
+  </li>
+
   <li>
     <a href class="auto">
       <b class="badge bg-info pull-right">3</b>
