省道路运输三级协同管理
省道路运输三级协同管理

省道路运输三级协同管理
省道路运输三级协同管理与省水路运政管理

--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -10,6 +10,14 @@
     </a>
   </li>
   <li>
+    <a href class="auto" ui-sref="app.three_level_coordinated_management">
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span >省道路运输三级协同管理</span>
+    </a>
+  </li>
+
+  <li>
     <a href class="auto">
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
@@ -17,31 +25,25 @@
     </a>
   </li>
   <li>
-    <a href class="auto">
-      <i class="glyphicon glyphicon-th-large icon text-success"></i>
-      <span class="font-bold">水路交通</span>
-    </a>
-  </li>
-  <li>
-    <a href class="auto">
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span>其他交通</span>
-    </a>
-  </li>
-  <li>
-    <a href class="auto" ui-sref="app.three_level_coordinated_management">
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span translate="aside.nav.DASHBOARD">省道路运输三级协同管理</span>
-    </a>
-  </li>
-  <li>
     <a href class="auto" ui-sref="app.waterway_administration">
       <i class="glyphicon glyphicon-th"></i>
-      <span translate="aside.nav.DASHBOARD">省水路运政管理</span>
+      <span>省水路运政管理</span>
     </a>
   </li>
+  <li>
+    <a href class="auto">
+      <i class="glyphicon glyphicon-th-large icon text-success"></i>
+      <span class="font-bold">智慧公交</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto" ui-sref="app.hunan_information_service">
+      <i class="glyphicon glyphicon-th"></i>
+      <span>湖南省公路水路建设与运输市场信息服务系统</span>
+    </a>
+  </li>
+
+
 
   <li>
     <a href class="auto">
