--- a/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
@@ -2,83 +2,82 @@
     app.settings.asideFolded = false;
     app.settings.asideDock = true;">
     <div class="wrapper-md" ng-controller="Collaborative_managementCtrl">
-        <ul id="myTab" class="nav nav-tabs">
-            <li class="active">
-                <a  data-toggle="tab"> 经营业户信息</a>
-            </li>
-            <li><a  data-toggle="tab">营运车辆信息</a></li>
-            <li><a  data-toggle="tab"> 从业人员信息 </a></li>
-            <li><a  data-toggle="tab">营运线路信息</a></li>
-            <li><a  data-toggle="tab"> 道路运政执法信息 </a></li>
-            <li><a  data-toggle="tab"> 道路运输管理机构信息 </a></li>
-        </ul>
-        <div id="myTabContent" class="tab-content">
-            <div class="tab-pane fade in active" id="home">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        常德交通信息服务平台
-                    </div>
-                    <div class="row wrapper">
-                        <div class="col-sm-5 m-b-xs">
-                            <select class="input-sm form-control w-sm inline v-middle">
-                                <option ng-value="index" ng-repeat="info in data.business.secondLevel">{{info}}</option>
-                            </select>
-                            <button class="btn btn-sm btn-default">确定</button>
+        <div class="wrapper bg-light lter b-b">
+            <div style="width:100%;" class="pre-scrollable">
+                <ul id="myTab" class="nav nav-tabs " style="overflow-x: auto;width:140%;" >
+                    <li  ng-repeat="(index,info) in data.business.secondLevel" ng-class="{'active':index ==0}">
+                        <a  data-toggle="tab"> {{info}}</a>
+                    </li>
+
+                </ul>
+            </div>
+            <div id="myTabContent" class="tab-content">
+                <div class="tab-pane fade in active" id="home">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            常德交通信息服务平台
                         </div>
-                        <div class="col-sm-4">
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="input-group">
-                                <input type="text" class="input-sm form-control" placeholder="Search">
-                                <span class="input-group-btn">
-            <button class="btn btn-sm btn-default" type="button">搜索</button>
-          </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="table-responsive" style="overflow: auto">
-                        <table class="table table-bordered b-t b-light" style="white-space: nowrap">
-                            <thead>
-                            <tr>
-                                <th>序号</th>
-                                <th ng-repeat="info in data.business.threeLevel[0]">{{info}}</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td ng-repeat="info in data.business.threeLevel[0]"></td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <footer class="panel-footer">
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs">
+                        <div class="row wrapper">
+                            <div class="col-sm-5 m-b-xs">
                                 <select class="input-sm form-control w-sm inline v-middle">
                                     <option ng-value="index" ng-repeat="info in data.business.secondLevel">{{info}}</option>
                                 </select>
                                 <button class="btn btn-sm btn-default">确定</button>
                             </div>
-                            <div class="col-sm-4 text-center">
-                                <small class="text-muted inline m-t-sm m-b-sm">常德交通信息服务平台</small>
+                            <div class="col-sm-4">
                             </div>
-                            <div class="col-sm-4 text-right text-center-xs">
-                                <ul class="pagination pagination-sm m-t-none m-b-none">
-                                    <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                                    <li><a href>1</a></li>
-                                    <li><a href>2</a></li>
-                                    <li><a href>3</a></li>
-                                    <li><a href>4</a></li>
-                                    <li><a href>5</a></li>
-                                    <li><a href><i class="fa fa-chevron-right"></i></a></li>
-                                </ul>
+                            <div class="col-sm-3">
+                                <div class="input-group">
+                                    <input type="text" class="input-sm form-control" placeholder="Search">
+                                    <span class="input-group-btn">
+            <button class="btn btn-sm btn-default" type="button">搜索</button>
+          </span>
+                                </div>
                             </div>
                         </div>
-                    </footer>
+                        <div class="table-responsive" style="overflow: auto">
+                            <table class="table table-bordered b-t b-light" style="white-space: nowrap">
+                                <thead>
+                                <tr>
+                                    <th>序号</th>
+                                    <th ng-repeat="info in data.business.threeLevel[0]">{{info}}</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td ng-repeat="info in data.business.threeLevel[0]"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <footer class="panel-footer">
+                            <div class="row">
+                                <div class="col-sm-4 hidden-xs">
+                                    <select class="input-sm form-control w-sm inline v-middle">
+                                        <option ng-value="index" ng-repeat="info in data.business.secondLevel">{{info}}</option>
+                                    </select>
+                                    <button class="btn btn-sm btn-default">确定</button>
+                                </div>
+                                <div class="col-sm-4 text-center">
+                                    <small class="text-muted inline m-t-sm m-b-sm">常德交通信息服务平台</small>
+                                </div>
+                                <div class="col-sm-4 text-right text-center-xs">
+                                    <ul class="pagination pagination-sm m-t-none m-b-none">
+                                        <li><a href><i class="fa fa-chevron-left"></i></a></li>
+                                        <li><a href>1</a></li>
+                                        <li><a href>2</a></li>
+                                        <li><a href>3</a></li>
+                                        <li><a href>4</a></li>
+                                        <li><a href>5</a></li>
+                                        <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </footer>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
