--- a/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
@@ -1,7 +1,7 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
     app.settings.asideFolded = false;
     app.settings.asideDock = true;">
-    <div class="wrapper-md" ng-controller="Collaborative_managementCtrl">
+    <div class="wrapper-md hbox hbox-auto-xs hbox-auto-sm ng-scope" ng-controller="Collaborative_managementCtrl">
         <div class="col w-md bg-light dk b-r bg-auto">
             <div class="wrapper hidden-sm hidden-xs" id="email-menu">
                 <ul class="nav nav-pills nav-stacked nav-sm">
