--- a/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.list.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.list.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="Collaborative_managementListCtrl">
   <!-- header -->
-  <div class="wrapper bg-light lter b-b">
+  <!--<div class="wrapper bg-light lter b-b">
     <div class="btn-group pull-right">
       <button type="button" class="btn btn-sm btn-bg btn-default"><i class="fa fa-chevron-left"></i></button>
       <button type="button" class="btn btn-sm btn-bg btn-default"><i class="fa fa-chevron-right"></i></button>
@@ -21,18 +21,18 @@
         <button class="btn btn-sm btn-bg btn-default" data-toggle="tooltip" data-placement="bottom" data-title="Refresh" data-original-title="" title=""><i class="fa fa-refresh"></i></button>
       </div>
     </div>
-  </div>
+  </div>-->
   <!-- / header -->
 
   <div class="wrapper bg-light lter b-b">
     <div style="width:100%;" class="pre-scrollable">
-      <ul id="myTab" class="nav nav-tabs " style="overflow-x: auto;width:140%;" >
+      <ul id="myTab" class="nav nav-tabs " style="overflow-x: auto;width:175%;" >
         <li  ng-repeat="(index,info) in data.business.secondLevel" ng-class="{'active':index ==0}">
           <a  data-toggle="tab"> {{info}}</a>
         </li>
       </ul>
     </div>
-    <div id="myTabContent" class="tab-content">
+    <div id="myTabContent" class="tab-content" style="margin-top:30px;">
       <div class="tab-pane fade in active" id="home">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -40,10 +40,7 @@
           </div>
           <div class="row wrapper">
             <div class="col-sm-5 m-b-xs">
-              <select class="input-sm form-control w-sm inline v-middle">
-                <option ng-value="index" ng-repeat="info in data.business.secondLevel">{{info}}</option>
-              </select>
-              <button class="btn btn-sm btn-default">确定</button>
+
             </div>
             <div class="col-sm-4">
             </div>
@@ -75,13 +72,10 @@
           <footer class="panel-footer">
             <div class="row">
               <div class="col-sm-4 hidden-xs">
-                <select class="input-sm form-control w-sm inline v-middle">
-                  <option ng-value="index" ng-repeat="info in data.business.secondLevel">{{info}}</option>
-                </select>
-                <button class="btn btn-sm btn-default">确定</button>
+
               </div>
               <div class="col-sm-4 text-center">
-                <small class="text-muted inline m-t-sm m-b-sm">常德交通信息服务平台</small>
+
               </div>
               <div class="col-sm-4 text-right text-center-xs">
                 <ul class="pagination pagination-sm m-t-none m-b-none">
