--- a/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
@@ -4,19 +4,19 @@
     <div class="wrapper-md" ng-controller="Three_level_coordinated_managementCtrl">
         <div>
             <div class="row">
-                <a class="col-lg-4 " ui-sref="app.collaborative_management" >
+                <a class="col-lg-4 " ui-sref="app.collaborative_management.list" >
                     <div style="border: 1px gray dashed;height:220px;" class="text-center active">
                         <h3 style="margin-top:70px;">经营业户信息</h3>
                         <p style="margin-top:30px;">331313条</p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.collaborative_management">
+                <a  class="col-lg-4" ui-sref="app.collaborative_management.list">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">营运车辆信息</h3>
                         <p style="margin-top:30px;">331313条</p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.collaborative_management">
+                <a  class="col-lg-4" ui-sref="app.collaborative_management.list">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">从业人员信息</h3>
                         <p style="margin-top:30px;">331313条</p>
@@ -24,19 +24,19 @@
                 </a>
             </div>
             <div class="row" style="margin-top:30px;">
-                <a class="col-lg-4 " ui-sref="app.collaborative_management" >
+                <a class="col-lg-4 " ui-sref="app.collaborative_management.list" >
                     <div style="border: 1px gray dashed;height:220px;" class="text-center active">
                         <h3 style="margin-top:70px;">营运线路信息</h3>
                         <p style="margin-top:30px;">331313条</p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.collaborative_management">
+                <a  class="col-lg-4" ui-sref="app.collaborative_management.list">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">道路运政执法信息</h3>
                         <p style="margin-top:30px;">331313条</p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.collaborative_management">
+                <a  class="col-lg-4" ui-sref="app.collaborative_management.list">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">道路运输管理机构信息</h3>
                         <p style="margin-top:30px;">331313条</p>
