--- a/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.html
@@ -1,12 +1,12 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
     app.settings.asideFolded = false;
     app.settings.asideDock = true;">
-    <div class="wrapper-md hbox hbox-auto-xs hbox-auto-sm ng-scope" ng-controller="Collaborative_managementCtrl">
+    <div class="wrapper-md hbox hbox-auto-xs hbox-auto-sm ng-scope" ng-controller="WaterwayYunZhengCtrl">
         <div class="col w-md bg-light dk b-r bg-auto">
             <div class="wrapper hidden-sm hidden-xs" id="email-menu">
                 <ul class="nav nav-pills nav-stacked nav-sm">
                     <li ng-repeat="fold in folds" ui-sref-active="active">
-                        <a ui-sref="app.collaborative_management({fold:fold.filter})">
+                        <a ui-sref="app.waterwayYunZheng.list({fold:fold.filter})">
                             {{fold.name}}
                         </a>
                     </li>
