湖南省公路水路建设与运输市场信息服务系统

--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -37,7 +37,7 @@
     </a>
   </li>
   <li>
-    <a href class="auto" ui-sref="app.hunan_information_service">
+    <a href class="auto" ui-sref="app.hunan_transport">
       <i class="glyphicon glyphicon-th"></i>
       <span>湖南省公路水路建设与运输市场信息服务系统</span>
     </a>
