--- a/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/collaborative_management.html
@@ -6,7 +6,7 @@
             <div class="wrapper hidden-sm hidden-xs" id="email-menu">
                 <ul class="nav nav-pills nav-stacked nav-sm">
                     <li ng-repeat="fold in folds" ui-sref-active="active">
-                        <a ui-sref="app.collaborative_management({fold:fold.filter})">
+                        <a ui-sref="app.collaborative_management.list({fold:fold.filter})">
                             {{fold.name}}
                         </a>
                     </li>
