湖南省港口企业与码头单位吞吐量报表

--- a/beauty-project/traffic/src/main/webapp/tpl/tra/waterway_administration.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/waterway_administration.html
@@ -1,7 +1,7 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
     app.settings.asideFolded = false;
     app.settings.asideDock = true;">
-    <div class="wrapper-md" ng-controller="Waterway_administrationCtrl">
+    <div class="wrapper-md" ng-controller="ThroughputNextLevelCtrl">
         <div>
             <div class="row">
                 <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.list" >
@@ -22,7 +22,7 @@
                         <p style="margin-top:30px;"><span>申请机构：3445个</span><span style="margin-left:50px;">机构等级：5级</span></p>
                     </div>
                 </a>
-            </div sty>
+            </div>
             <div class="row" style="margin-top:30px;">
                 <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.list" >
                     <div style="border: 1px gray dashed;height:220px;" class="text-center active">
