--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -42,20 +42,23 @@
       <span>湖南省公路水路建设与运输市场信息服务系统</span>
     </a>
   </li>
-
-
-
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.throughput">
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
-      <span>信用管理</span>
+      <span>湖南省港口企业与码头单位吞吐量报表</span>
     </a>
   </li>
   <li>
     <a href class="auto">
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
-      <span class="font-bold">投资计划管理</span>
+      <span class="font-bold">水运AIS系统</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <i class="glyphicon glyphicon-th-large icon text-success"></i>
+      <span class="font-bold">省客运联网售票系统</span>
     </a>
   </li>
   <li ui-sref-active="active">
