--- a/beauty-project/traffic/src/main/webapp/tpl/tra/throughputNextLevel.list.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/throughputNextLevel.list.html
@@ -1,6 +1,8 @@
-
+<style>
+  .throughput p{margin:0px;}
+</style>
 <div ng-controller="ThroughputNextLevelListCtrl">
-  <div class="wrapper bg-light lter b-b">
+  <div class="wrapper bg-light lter b-b throughput">
     <div id="myTabContent" class="tab-content" >
       <div class="tab-pane fade in active" id="home">
         <div class="panel panel-default">
@@ -12,7 +14,7 @@
                 <span>今日</span>
                 <span style="margin-left:20px;">本周</span>
                 <span style="margin-left:20px;" >本月</span>
-              <input type="text" class="input-sm form-control" placeholder="2018-10-23 ~ 2018-10-29" style="display: inline-block;margin-left: 20px;">
+              <input type="text" class="input-sm form-control" placeholder="2018-10-23 ~ 2018-10-29" style="display: inline-block;margin-left: 20px;width:170px;">
             </div>
             <div class="col-sm-3">
               <div class="input-group">
@@ -27,6 +29,57 @@
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="panel panel-default" >
+              <div class="panel-heading font-bold">全市泊位状况</div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <div style="margin-left:30px;">
+                    <div style="margin-top:30px;">
+                      <p>累计港口泊位数</p>
+                      <p style="font-size: 30px;">4320</p>
+                      <p><span style="color:#ff6666">10%</span>&nbsp;&nbsp; 同比上月</p>
+                    </div>
+                    <div style="margin-top:30px;">
+                      <p>增加的报告期</p>
+                      <p style="font-size: 30px;">4320</p>
+                      <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
+                    </div>
+                    <div style="margin-top:30px;">
+                      <p>报废的报告期</p>
+                      <p style="font-size: 30px;">4320</p>
+                      <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-9">
+                  <div class="panel-body">
+                    <div ui-jq="plot" ui-options="
+              [
+                { data: {{d}}, points: { show: true, radius: 6},splines: { show: true, fill: true, fillColor: { colors: [{ opacity: 0.1 }, { opacity: 0.1}] } }  }
+              ],
+              {
+                colors: ['{{app.color.info}}'],
+                series: { shadowSize: 3 },
+                xaxis:{
+                  font: { color: '#ccc' },
+                  position: 'bottom',
+                  ticks: [
+                    [ 1, '10-23周日' ], [ 2, '10-24周一' ], [ 3, '10-25周二' ], [ 4, '10-6周三' ], [ 5, '10-27周四' ], [ 6, '10-28周五' ], [ 7, '10-28周五' ]
+                  ]
+                },
+                yaxis:{ font: { color: '#ccc' } },
+                grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                tooltip: true,
+                tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+              }
+            " style="height:320px" >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
