港口快报吞吐量

--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -50,7 +50,7 @@
     </a>
   </li>
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.water_transportation">
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
       <span class="font-bold">水运AIS系统</span>
     </a>
