--- a/beauty-project/traffic/src/main/webapp/tpl/tra/throughput.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/throughput.html
@@ -36,7 +36,7 @@
                         <p style="margin-top:30px;"><span>泊位：984个</span><span style="margin-left:50px;">增加报告：49个</span><span style="margin-left:50px;">  报废报告：16个</span></p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.throughputNextLevel.list">
+                <a  class="col-lg-4" ui-sref="app.throughputNextLevel.list({fold:'express'})">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">港口快报吞吐量</h3>
                         <p style="margin-top:30px;"><span>企业：424个</span><span style="margin-left:50px;">注销：26个</span></p>
