经营业户信息、营运车辆信息

--- a/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
@@ -10,7 +10,7 @@
                         <p style="margin-top:30px;">331313条</p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.collaborative_management.list">
+                <a  class="col-lg-4" ui-sref="app.collaborative_management.vehicle({fold:'starred'})">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">营运车辆信息</h3>
                         <p style="margin-top:30px;">331313条</p>
