--- a/beauty-project/traffic/src/main/webapp/tpl/tra/waterway_administration.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/waterway_administration.html
@@ -1,7 +1,7 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
     app.settings.asideFolded = false;
     app.settings.asideDock = true;">
-    <div class="wrapper-md" ng-controller="ThroughputNextLevelCtrl">
+    <div class="wrapper-md" ng-controller="Waterway_administrationCtrl">
         <div>
             <div class="row">
                 <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.list" >
@@ -24,19 +24,19 @@
                 </a>
             </div>
             <div class="row" style="margin-top:30px;">
-                <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.list" >
+                <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.waterway" >
                     <div style="border: 1px gray dashed;height:220px;" class="text-center active">
                         <h3 style="margin-top:70px;">水路运输业户台帐</h3>
                         <p style="margin-top:30px;"><span>经营管理机构：5255个</span><span style="margin-left:50px;">类型：76个</span></p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.waterwayYunZheng.list">
+                <a  class="col-lg-4" ui-sref="app.waterwayYunZheng.waterway">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">水路运输企业人员</h3>
                         <p style="margin-top:30px;"><span>人员：35535名</span><span style="margin-left:50px;">船员适任证类型：5类</span></p>
                     </div>
                 </a>
-                <a  class="col-lg-4" ui-sref="app.waterwayYunZheng.list">
+                <a  class="col-lg-4" ui-sref="app.waterwayYunZheng.auxiliary">
                     <div style="border: 1px gray dashed;height:220px;" class="text-center">
                         <h3 style="margin-top:70px;">运输辅助企业台帐</h3>
                         <p style="margin-top:30px;"><span>企业：54646个</span><span style="margin-left:50px;">经营类型：21种</span></p>
@@ -44,7 +44,7 @@
                 </a>
             </div>
             <div class="row" style="margin-top:30px;">
-                <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.list" >
+                <a class="col-lg-4 " ui-sref="app.waterwayYunZheng.auxiliary" >
                     <div style="border: 1px gray dashed;height:220px;" class="text-center active">
                         <h3 style="margin-top:70px;">运输辅助企业人员</h3>
                         <p style="margin-top:30px;">辅助人员：43447892名</p>
